deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: default
  labels:
    app: test-service
spec:
  ports:
    - port: 8000
      protocol: TCP
  selector:
    app: test-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-service
  template:
    metadata:
      labels:
        app: test-service
    spec:
      containers:
        - name: test-service
          image: petrulin/test-service
          ports:
            - name: web
              containerPort: 8000
          startupProbe:
            httpGet:
              path: health
              port: 8000
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: health/readiness
              port: 8000
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: health/liveness
              port: 8000
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
      volumes:
        - name: config
          configMap:
            name: my-config
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: test-service
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-service-ingress2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /student/$1
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/(.*)/
            pathType: Prefix
            backend:
              service:
                name: test-service
                port:
                  number: 8000
